# timslite

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  OPTIMIZATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  build.bat  build.sh  design.md  plan.md  timestore.md  timslite.h
.github/workflows/: ci.yml  dotnet-release.yml  java-release.yml  nodejs-release.yml  python-release.yml  release.yml
.qoder/repowiki/en/content/: Getting Started.md  (+1 more)
benchmarks/: bench_multi.rs  bench_single.rs  common.rs
docs/: timestore.md
docs/blog/: quick-start-embedded-time-series.md
docs/design/: architecture.md  background-and-cache.md  cargo-and-config.md  compression.md  data-model.md  data-segment.md  dataset-identifier.md  dataset-inspect.md  dataset-operations.md  dataset-read-operations.md  design-decisions.md  index-continuous.md  journal-storage.md  journal.md  lazy-allocation.md  memory-and-concurrency.md  meta-format.md  query-iterator.md  queue-overview.md  queue-state-file.md  store-and-ffi.md  time-index.md
docs/plan/: overview.md  phase-01-skeleton.md  phase-02-header-block.md  phase-03-datasegment.md  phase-04-time-index.md  phase-05-dataset.md  phase-06-store-bg.md  phase-07-ffi.md  phase-08-tests-perf.md  phase-09-blockcache.md  phase-10-continuous-storage.md  phase-11-o1-optimization.md  phase-12-lazy-allocation.md  phase-13-query-iterator.md  phase-14-dataset-config-builder.md  phase-15-header-state-split.md  phase-16-data-retention.md  phase-17-correction-write.md  phase-18-out-of-order-write-and-delete.md  phase-19-single-timestamp-read.md  phase-20-latest-timestamp-read.md  phase-21-manual-bg-execution.md  phase-22-manual-bg-python-wrapper.md  phase-23-record-length-u32.md  phase-24-sparse-continuous-index.md  phase-25-header-variable-length.md  phase-26-github-actions-ci.md  phase-27-queue-module.md  phase-28-journal.md  phase-29-dataset-append.md  phase-30-dataset-read-operations.md  phase-31-store-api-listing.md  phase-32-dataset-inspect.md  phase-33-dirty-flush-queue.md  phase-34-ordered-segment-registry.md  phase-35-dataset-identifier.md  phase-36-journal-dedicated-storage.md  phase-37-journal-record-tv-format.md  phase-38-zstd-frame-checksum.md  phase-39-dataset-journal-toggle.md  (+7 more)
docs/review/: design-review-todo.md  design-review.md  test-review-todo.md  test-review.md
docs/superpowers/plans/: 2026-06-26-timslite-guide-restructure.md
examples/: basic.rs  config.rs  performance.rs
include/: timslite.h
proptest-regressions/: meta.txt
skills/timslite-guide/: SKILL.md  api-reference.md  scenarios.md  troubleshooting.md
skills/timslite-guide/dotnet/: SKILL.md  api-reference.md  examples.md  quick-start.md
skills/timslite-guide/java/: SKILL.md  api-reference.md  examples.md  quick-start.md
skills/timslite-guide/nodejs/: SKILL.md  api-reference.md  examples.md  quick-start.md
skills/timslite-guide/python/: SKILL.md  api-reference.md  examples.md  quick-start.md
skills/timslite-guide/rust/: SKILL.md  api-reference.md  examples.md  quick-start.md
src/: block.rs  cache.rs  compress.rs  config.rs  dataset.rs  dataset_state.rs  error.rs  ffi.rs  file.rs  header.rs  lib.rs  meta.rs  protos.rs  store.rs  types.rs  util.rs
src/bg/: flush.rs  idle.rs  mod.rs
src/index/: mod.rs  segment.rs
src/journal/: log.rs  mod.rs  queue.rs  record.rs  segment.rs
src/query/: hot_block.rs  index_iter.rs  iter.rs  length_iter.rs  mod.rs
src/queue/: mod.rs
src/segment/: data.rs  mod.rs
tests/: api_contract_test.rs  append_test.rs  background_test.rs  cache_test.rs  compression_test.rs  config_test.rs  config_tests.rs  continuous_index_test.rs  correction_write_test.rs  coverage_supplement_test.rs  crash_recovery_test.rs  dataset_basic_test.rs  dataset_identifier_test.rs  dataset_inspect_test.rs  dataset_lifecycle_test.rs  dataset_lock_boundary_test.rs  ffi_test.rs  file_tests.rs  integration_test.rs  integration_tests.rs  iterator_test.rs  journal_integration_test.rs  journal_test.rs  lazy_allocation_test.rs  negative_test.rs  out_of_order_delete_test.rs  proptest_basic.rs  query_test.rs  queue_test.rs  read_operations.rs  rust_public_api_test.rs  store_listing_test.rs  store_readonly_lock_test.rs  type_tests.rs
tests/common/: mod.rs
wrapper/cffi/: Cargo.toml
wrapper/cffi/include/: timslite.h
wrapper/cffi/src/: lib.rs
wrapper/cffi/tests/: cffi_api_test.rs
wrapper/dotnet/: .gitignore  README.md  Timslite.slnx  design.md  plan.md
wrapper/dotnet/native/: Cargo.toml  uniffi.toml
wrapper/dotnet/native/src/: bridge.rs  config.rs  errors.rs  lib.rs  query.rs  queue.rs  timslite.udl
wrapper/dotnet/native/tests/: bridge_tests.rs
wrapper/dotnet/scripts/: prepare-publish.ps1  prepare-publish.sh
wrapper/java/: .gitignore  .project  Cargo.toml  README.md  build.rs  design.md  plan.md  pom.xml  uniffi.toml
wrapper/java/native/: Cargo.toml  uniffi.toml
wrapper/java/native/src/: bridge.rs  lib.rs  query.rs  queue.rs  timslite.udl
wrapper/java/scripts/: prepare-publish.sh
wrapper/java/src/: config.rs  errors.rs  lib.rs  query.rs  queue.rs  timslite.udl
wrapper/nodejs/: .gitignore  Cargo.toml  README.md  binding-target.js  design.md  index.d.ts  index.js  package-lock.json  package.json  plan.md
wrapper/nodejs/scripts/: install.js  prepare-publish.js
wrapper/nodejs/src/: config.rs  dataset.rs  errors.rs  lib.rs  query.rs  queue.rs  store.rs  types.rs
wrapper/nodejs/tests/: basic.test.ts  config.test.ts  dataset.test.ts  journal.test.ts  package.test.ts  queue.test.ts
wrapper/python/: .gitignore  Cargo.toml  README.md  design.md  plan.md  pyproject.toml
wrapper/python/python/timslite/: __init__.py
wrapper/python/scripts/: prepare_publish.py
wrapper/python/src/: config.rs  dataset.rs  exceptions.rs  lib.rs  query.rs  queue.rs  store.rs
wrapper/python/tests/: conftest.py  test_basic.py  test_config.py  test_continuous.py  test_exceptions.py  test_journal.py  test_lifecycle.py  test_multi_dataset.py  test_packaging.py  test_persistence.py  test_queue.py  test_store_manual_bg.py  test_wrapper_coverage.py  test_write_query.py
(+194 files in other folders)
