[package]
name = "timslite"
version = "0.1.1"
edition = "2021"
description = "High-performance mmap-backed time-series storage engine with queues, journal, C ABI, and Python bindings."
license = "MIT"
repository = "https://github.com/snower/timslite"
homepage = "https://github.com/snower/timslite"
documentation = "https://docs.rs/timslite"
readme = "README.md"
keywords = ["time-series", "storage", "mmap", "queue", "journal"]
categories = ["database-implementations", "filesystem"]
include = [
    "Cargo.toml",
    "README.md",
    "design.md",
    "include/**",
    "src/**",
    "tests/**",
    "benchmarks/**",
    "docs/design/**",
]

[lib]
name = "timslite"
crate-type = ["cdylib", "rlib"]

[dependencies]
memmap2 = "0.9"
miniz_oxide = "0.8"
log = "0.4"
libc = "0.2"
zstd = "0.13"

[dev-dependencies]
criterion = "0.5"
proptest = "1"
rand = "0.8"
regex = "1"
tempfile = "3"

[[bench]]
name = "bench_single"
harness = false
path = "benchmarks/bench_single.rs"

[[bench]]
name = "bench_multi"
harness = false
path = "benchmarks/bench_multi.rs"
