[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "timslite"
version = "0.1.3"
description = "High-performance mmap-backed time-series storage for Python."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["time-series", "storage", "mmap", "queue", "journal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/snower/timslite"
Repository = "https://github.com/snower/timslite"
Issues = "https://github.com/snower/timslite/issues"

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]
python-source = "python"
strip = true
