[package]
name = "timslite-java"
version = "0.1.3"
edition = "2021"
publish = false
description = "Java/Kotlin UniFFI bindings for the timslite time-series storage engine."
license = "MIT"
repository = "https://github.com/snower/timslite"
readme = "README.md"
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "src/**",
    "tests/**",
]

[lib]
name = "timslite_java"
crate-type = ["cdylib", "rlib"]

[dependencies]
timslite = { path = "../../..", version = "=0.1.3" }
uniffi = { version = "0.31", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[dev-dependencies]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"
